# liandan

./: .gitignore  README.md  pyproject.toml
scripts/: download_fashion_mnist.py  download_mnist.py
src/liandan/: __init__.py  train.py
src/liandan/archs/: common.py  conv.py  yolo.py
src/liandan/data/: __init__.py  banana_detection.py  fashion_mnist.py  linear_regression.py
src/liandan/losses/: detection.py
src/liandan/metrics/: __init__.py  base.py  classification.py  detection.py
src/liandan/models/: __init__.py  classifier.py  linear_regression.py
src/liandan/utils/: __init__.py  _device.py  data.py  detection.py  opencv.py
tests/archs/: test_common.py
tests/metrics/: test_classification.py  test_detection.py
tests/utils/: test_detection.py
