[project]
name = "liandan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gen-how", email = "billchen85@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.scripts]
liandan-train = "liandan.train:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
